--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
                  debugUIEnabled: false; trackingMethod: best;" 
            renderer="logarithmicDepthBuffer: true;">
       
-      <a-entity gltf-model="https://cdn.glitch.me/1c79f37f-0c92-4387-9738-5255b99da4e5%2Fscene.gltf?v=1635764359198" rotation="0 180 0" scale="0.15 0.15 0.15" gps-entity-place="longitude: -0,39366; latitude: 39.49758;" animation-mixer/>
+      <a-entity gltf-model="./magnemite/scene.gltf" rotation="0 180 0" scale="0.15 0.15 0.15" gps-entity-place="longitude: -0,39366; latitude: 39.49758;" animation-mixer/>
       <a-camera gps-camera rotation-reader> </a-camera>
     </a-scene>
   </body>
